<resources>
    <string name="app_name">常用控件展示</string>
    <string name="info">无敌并一击必杀: whosyourdaddy \n无限魔法: thereisnospoon\n 任务模式里即使失败也继续游戏: strengthandhonor\n 地图全开: iseedeadpeople</string>
    <string name="timer_task">限时任务</string>
    <string name="badger">提示</string>
    <string name="left">左</string>
    <string name="bottom">下</string>
    <string name="right">右</string>
    <string name="top">上</string>
    <string name="demo">演示</string>
    <string name="test">测试</string>
    <string name="text_gravity">文字方向</string>
    <string name="all">全部</string>
    <string name="drawable_padding">Drawable边距</string>
    <string name="text_mode">文字模式</string>
    <string name="drawable_padding_value">间距:%1$s</string>
    <string name="debug">调试</string>
    <string name="drawable_height">Drawable高</string>
    <string name="drawable_width">Drawable宽</string>
    <string name="vertical">纵向</string>
    <string name="horizontal">横向</string>
    <string name="divide">分隔线</string>
    <string name="solidColor">SolidColor</string>
    <string name="stroke_width">StrokeWidth</string>
    <string name="strokeWidth">StrokeWidth</string>
    <string name="dash_width">DashWidth</string>
    <string name="dash_gap">DashGap</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="left_padding">LeftPadding</string>
    <string name="right_padding">RightPadding</string>
    <string name="top_padding">TopPadding</string>
    <string name="bottom_padding">BottomPadding</string>
    <string name="shape_type">ShapeType</string>
    <string name="gradient_type">GradientType</string>
    <string name="gradient_angle">GradientAngle</string>
    <string name="gradient_radius">GradientRadius</string>
    <string name="center_x">CenterX</string>
    <string name="center_y">CenterY</string>
    <string name="choice_color">选择颜色</string>
    <string name="strokeColor">StrokeColor</string>
    <string name="startColor">GradientStartColor</string>
    <string name="centerColor">GradientCenterColor</string>
    <string name="EndColor">GradientEndColor</string>
    <string name="userLevel">UseLevel</string>
    <string name="lt_radius">LeftTop</string>
    <string name="lb_radius">LeftBottom</string>
    <string name="rt_radius">RightTop</string>
    <string name="rb_radius">RightBottom</string>
    <string name="fixRaw">Raw</string>
    <string name="horizontal_padding">HorizontalPadding</string>
    <string name="vertical_padding">VerticalPadding</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="choice_mode">选择模式</string>
    <string name="button_width">ButtonWidth</string>
    <string name="button_height">ButtonHeight</string>
    <string name="choice_gravity">标记方向</string>
    <string name="round_radius">圆角大小</string>
    <string name="divide_color">divideColor</string>
    <string name="tab_size">TabSize</string>
    <string name="tagType">TabType</string>
    <string name="wave_level">WaveLevel</string>
    <string name="innerRadiusRatio">InnerRadiusRatio</string>
    <string name="thicknessRatio">ThicknessRatio</string>
    <string name="inner_radius">InnerRadius</string>
    <string name="thickness">ThickNess</string>
    <string name="tab_width">TabWidth</string>
    <string name="tab_height">TabHeight</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="item_bg_mode">背景模式</string>
    <string name="interval_mode">边距模式</string>
    <string name="time_downer_info">定时的控件</string>
    <string name="fillet">分隔模式</string>
    <string name="fillet_value">圆角值:%1$s</string>
    <string name="gravity">方向</string>
    <string name="sub_item">Sub Item</string>
    <string name="any_thing">AnyThing</string>
    <string name="center_offset">CenterOffset</string>
    <string name="check">Check</string>
    <string name="input_length_error">Input length error</string>
    <string name="input_not_in_range">Input not in range</string>
    <string name="input_not_phone">Not phone number</string>
    <string name="clear">Clear</string>
    <string name="patter_text1">匹配长度大于4</string>
    <string name="patter_text2">匹配长度大于4小于10,且为数字</string>
    <string name="patter_text3">匹配是否为电话号码</string>
    <string name="progress_value">当前进度</string>
    <string name="shadow_text_view">ShadowTextView</string>
</resources>
