<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="50dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/view1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:background="@color/app_bg"
                android:scaleType="center" />

            <ImageView
                android:id="@+id/view2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/app_bg"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_stroke_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/stroke_width"
            auto:sl_max="40" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shape_type" />

        <com.cz.app.widget.RadioLayout
            android:id="@+id/rl_shape_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            auto:rl_items="@array/shape_type" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gradient_type" />

        <com.cz.app.widget.RadioLayout
            android:id="@+id/rl_gradient_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            auto:rl_items="@array/gradient_type" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_left_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/left_padding"
                auto:sl_max="80" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_right_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/right_padding"
                auto:sl_max="80" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_top_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/top_padding"
                auto:sl_max="80" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_bottom_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/bottom_padding"
                auto:sl_max="80" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_gradient_angle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/gradient_angle"
                auto:sl_max="7" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_gradient_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/gradient_radius" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_center_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/center_x" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_center_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/center_y" />
        </LinearLayout>

        <com.cz.app.widget.ColorItem
            android:id="@+id/ci_start_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            auto:ci_text="@string/startColor" />

        <com.cz.app.widget.ColorItem
            android:id="@+id/ci_center_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            auto:ci_text="@string/centerColor" />

        <com.cz.app.widget.ColorItem
            android:id="@+id/ci_end_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            auto:ci_text="@string/EndColor" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/use_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userLevel" />


        <com.cz.app.widget.ColorItem
            android:id="@+id/ci_solid_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:ci_text="@string/solidColor" />


        <com.cz.app.widget.ColorItem
            android:id="@+id/ci_stroke_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:ci_text="@string/strokeColor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_lt_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/lt_radius"
                auto:sl_max="40" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_lb_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/lb_radius"
                auto:sl_max="40" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_rt_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/rt_radius"
                auto:sl_max="40" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_rb_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/rb_radius"
                auto:sl_max="40" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_dash_width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/dash_width"
                auto:sl_max="40" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_dash_gap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/dash_gap"
                auto:sl_max="40" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/width"
                auto:sl_max="40" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/height"
                auto:sl_max="40" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_inner_radius_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/innerRadiusRatio"
                auto:sl_max="40" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_thickness_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/thicknessRatio"
                auto:sl_max="40" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_thickness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/thickness"
                auto:sl_max="40" />

            <com.cz.app.widget.SeekLayout
                android:id="@+id/sl_inner_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                auto:sl_info="@string/inner_radius"
                auto:sl_max="40" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>