<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.cz.library.widget.RadioGridLayout
            android:id="@+id/cl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/app_bg"
            android:minHeight="200dp"
            auto:cl_fixRaw="3"
            auto:cl_itemHeight="60dp"
            auto:cl_itemHorizontalPadding="8dp"
            auto:cl_itemVerticalPadding="8dp"
            auto:rl_buttonHorizontalPadding="8dp"
            auto:rl_buttonImage="@mipmap/selected_icon"
            auto:rl_buttonVerticalPadding="8dp"
            auto:rl_imageGravity="right|bottom"
            auto:rl_imageHeight="12dp"
            auto:rl_imageWidth="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice_mode" />

        <com.cz.app.widget.RadioLayout
            android:id="@+id/rl_choice_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            auto:rl_items="@array/choice_type" />

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/button_width" />

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/button_height" />

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/horizontal_padding" />

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_vertical_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/vertical_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice_gravity" />

        <com.cz.app.widget.CheckLayout
            android:id="@+id/cl_gravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            auto:cl_items="@array/gravity1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/add" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>