<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.cz.library.widget.CenterTextView
            android:id="@+id/cv_text_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/dark_gray"
            android:drawableLeft="@mipmap/task_icon"
            android:gravity="center_vertical"
            android:text="@string/test"
            android:textColor="@color/white"
            android:textSize="20dp"
            auto:cv_drawableHeight="30dp"
            auto:cv_drawableMode="right"
            auto:cv_drawableWidth="30dp"
            auto:cv_sizeMode="left|top|bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mode" />

        <com.cz.app.widget.RadioLayout
            android:id="@+id/rl_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="horizontal"
            auto:rl_items="@array/gravity2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_gravity" />

        <com.cz.app.widget.CheckLayout
            android:id="@+id/rl_gravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="horizontal"
            auto:cl_items="@array/gravity1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_gravity" />

        <com.cz.app.widget.CheckLayout
            android:id="@+id/rl_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="horizontal"
            auto:cl_items="@array/gravity1" />

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/drawable_width" />

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/drawable_height" />

        <com.cz.app.widget.SeekLayout
            android:id="@+id/sl_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:sl_info="@string/drawable_padding"
            auto:sl_max="60" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sc_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug" />

    </LinearLayout>
</ScrollView>